namespace APILP3.Models.Requests
{
    public class BillingAddress
    {
        public string BillingAddress1 { get; set; }
        public string BillingAddress2 { get; set; }
        public string BillingPostalCode { get; set; }
        public string BillingCity { get; set; }
        public string BillingCountry { get; set; }
    }
}
