namespace APILP3.Models.Requests
{
    public class DeliveryAddress
    {
        public string DeliveryAddress1 { get; set; }
        public string DeliveryAddress2 { get; set; }
        public string DeliveryPostalCode { get; set; }
        public string DeliveryCity { get; set; }
        public string DeliveryCountry { get; set; }

    }
}
